reviewed: eclipse.platform.releng